add_compile_options(-std=c++11)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
SET(LIBSALES_ITEM_SRC Sales_item.h)
SET(LIBSALES_DATA_SRC Sales_data.h)
SET(LIBUTILS_SRC utils.h)
SET(LIBCHAPTER6_SRC Chapter6.hpp)
SET(LIBPERSON_SRC Person.hpp)
SET(LIBSCREEN_SRC Screen.hpp )
SET(LIBEX_7_31_SRC ex_7_31.hpp)
SET(LIBWINDOW_MGR_SRC Window_mgr.hpp)
ADD_LIBRARY(Sales_item SHARED ${LIBSALES_ITEM_SRC})
ADD_LIBRARY(Sales_data SHARED ${LIBSALES_DATA_SRC})
ADD_LIBRARY(utils SHARED ${LIBUTILS_SRC})
ADD_LIBRARY(Chapter6 SHARED ${LIBCHAPTER6_SRC})
ADD_LIBRARY(Person SHARED ${LIBPERSON_SRC})
ADD_LIBRARY(Screen SHARED ${LIBSCREEN_SRC})
ADD_LIBRARY(ex_7_31 SHARED ${LIBEX_7_31_SRC})
ADD_LIBRARY(Window_mgr ${LIBWINDOW_MGR_SRC})
