INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH  ${CMAKE_SOURCE_DIR}/bin)
add_executable(item_io item_io.cpp)
## add_executable(Sales_data_example_1 Sales_data_example_1.cpp)
# add_executable(string_line string_line.cpp)
# add_executable(string_io_line_variant1 stringio_line_variant1.cpp)
# add_executable(stringio_line_variant2 stringio_line_variant2.cpp)
# add_executable(ex_3_2a ex_3_2a.cpp)
# add_executable(ex_3_2b ex_3_2b.cpp)
# add_executable(ex_3_4a ex_3_4a.cpp)
# add_executable(ex_3_4b ex_3_4b.cpp)
# add_executable(ex_3_5a ex_3_5a.cpp)
# add_executable(ex_3_5b ex_3_5b.cpp)
# add_executable(hexdigits hexdigits.cpp)
# add_executable(ex_3_6 ex_3_6.cpp)
# add_executable(ex_3_8 ex_3_8.cpp)
# add_executable(ex_3_14 ex_3_14.cpp)
# add_executable(ex_3_15 ex_3_15.cpp)
# add_executable(ex_3_16 ex_3_16.cpp)
# add_executable(ex_3_17 ex_3_17.cpp)
# add_executable(ex_3_20 ex_3_20.cpp)
# add_executable(ex_3_21 ex_3_21.cpp)
# add_executable(ex_3_22 ex_3_22.cpp)
# add_executable(ex_3_23 ex_3_23.cpp)
# add_executable(ex_3_23a ex_3_23a.cpp)
# add_executable(ex_3_24 ex_3_24.cpp)
# add_executable(ex_3_31 ex_3_31.cpp)
# add_executable(ex_3_32 ex_3_32.cpp)
# add_executable(ex_3_35 ex_3_35.cpp)
# add_executable(ex_3_36 ex_3_36.cpp)
# add_executable(ex_3_39 ex_3_39.cpp)
# add_executable(ex_3_40 ex_3_40.cpp)
# add_executable(ex_3_41 ex_3_41.cpp)
# add_executable(ex_3_42 ex_3_42.cpp)
# add_executable(ex_3_43 ex_3_43.cpp)
# add_executable(ex_3_44 ex_3_44.cpp)
# add_executable(ex_3_45 ex_3_45.cpp)
# add_executable(ex_4_21 ex_4_21.cpp)
# add_executable(ex_4_22 ex_4_22.cpp)
# add_executable(ex_4_28 ex_4_28.cpp)
# add_executable(ex_5_5 ex_5_5.cpp)
# add_executable(ex_5_6 ex_5_6.cpp)
# add_executable(ex_5_9 ex_5_9.cpp)
# add_executable(ex_5_10 ex_5_10.cpp)
# add_executable(ex_5_11 ex_5_11.cpp)
# add_executable(ex_5_12 ex_5_12.cpp)
# add_executable(ex_5_14 ex_5_14.cpp)
# add_executable(ex_5_17 ex_5_17.cpp)
# add_executable(ex_5_19 ex_5_19.cpp)
# add_executable(ex_5_20 ex_5_20.cpp)
# add_executable(ex_5_21 ex_5_21.cpp)
# add_executable(ex_5_23 ex_5_23.cpp)
# add_executable(ex_5_24 ex_5_24.cpp)
# add_executable(ex_5_25 ex_5_25.cpp)
# add_executable(ex_6_3 ex_6_3.cpp)
# add_executable(ex_6_4 ex_6_4.cpp)
# add_executable(ex_6_5 ex_6_5.cpp)
# add_executable(ex_6_6 ex_6_6.cpp)
# add_executable(ex_6_7 ex_6_7.cpp)
# add_executable(ex_6_9 ex_6_9.cpp Chapter6.cpp)
# add_executable(ex_6_10 ex_6_10.cpp)
# add_executable(ex_6_11 ex_6_11.cpp)
# add_executable(ex_6_12 ex_6_12.cpp)
# add_executable(ex_6_17 ex_6_17.cpp)
# add_executable(ex_6_21 ex_6_21.cpp)
# add_executable(ex_6_22 ex_6_22.cpp)
# add_executable(ex_6_23 ex_6_23.cpp)
# add_executable(ex_6_25 ex_6_25.cpp)
# add_executable(ex_6_27 ex_6_27.cpp)
# add_executable(ex_6_33 ex_6_33.cpp)
# add_executable(ex_6_38 ex_6_38.cpp)
# add_executable(ex_6_42 ex_6_42.cpp)
# add_executable(ex_6_44 ex_6_44.cpp)
# add_executable(ex_6_47 ex_6_47.cpp)
# add_executable(ex_6_51 ex_6_51.cpp)
# add_executable(ex_6_55 ex_6_55.cpp)
## add_executable(ex_7_1 ex_7_1.cpp)
## add_executable(ex_7_3 ex_7_3.cpp)
# add_executable(ex_7_7 ex_7_7.cpp)
# add_executable(ex_7_11 ex_7_11.cpp)
# add_executable(ex_7_13 ex_7_13.cpp)
# add_executable(ex_7_27 ex_7_27.cpp)
# add_executable(ex_8_1 ex_8_1.cpp)
# add_executable(ex_8_4 ex_8_4.cpp)
# add_executable(ex_8_5 ex_8_5.cpp)
# add_executable(ex_8_6 ex_8_6.cpp)
# add_executable(ex_8_7 ex_8_7.cpp)
# add_executable(ex_8_8 ex_8_8.cpp)
# add_executable(ex_8_9 ex_8_9.cpp)
# add_executable(ex_8_10 ex_8_10.cpp)
# add_executable(ex_8_13 ex_8_13.cpp)
# add_executable(ex_9_4 ex_9_4.cpp)
# add_executable(ex_9_5 ex_9_5.cpp)
# add_executable(ex_9_13 ex_9_13.cpp)
# add_executable(ex_9_14 ex_9_14.cpp)
# add_executable(ex_9_15 ex_9_15.cpp)
# add_executable(ex_9_16 ex_9_16.cpp)
# add_executable(ex_9_18 ex_9_18.cpp)
# add_executable(ex_9_19 ex_9_19.cpp)
# add_executable(ex_9_20 ex_9_20.cpp)
# add_executable(ex_9_24 ex_9_24.cpp)
# add_executable(ex_9_26 ex_9_26.cpp)
# add_executable(ex_9_27 ex_9_27.cpp)
# add_executable(ex_9_31 ex_9_31.cpp)
# add_executable(ex_9_31_variant ex_9_31_variant.cpp)
# add_executable(ex_9_38 ex_9_38.cpp)
# add_executable(ex_9_41 ex_9_41.cpp)
# add_executable(ex_9_43 ex_9_43.cpp)
# add_executable(ex_9_45 ex_9_45.cpp)
# add_executable(ex_9_47 ex_9_47.cpp)
# add_executable(ex_9_47_variant ex_9_47_variant.cpp)
# add_executable(ex_9_49 ex_9_49.cpp)
# add_executable(ex_9_50 ex_9_50.cpp)
# add_executable(ex_9_51 ex_9_51.cpp)
# add_executable(ex_9_52 ex_9_52.cpp)
# add_executable(ex_10_1 ex_10_1.cpp)
# add_executable(ex_10_2 ex_10_2.cpp)
# add_executable(ex_10_3 ex_10_3.cpp)
# add_executable(ex_10_4 ex_10_4.cpp)
# add_executable(ex_10_6 ex_10_6.cpp)
# add_executable(ex_10_9 ex_10_9.cpp)
# add_executable(ex_10_11 ex_10_11.cpp)
# add_executable(ex_10_12 ex_10_12.cpp)
# add_executable(ex_10_13 ex_10_13.cpp)
# add_executable(ex_10_16 ex_10_16.cpp)
# add_executable(ex_10_17 ex_10_17.cpp)
# add_executable(ex_10_18 ex_10_18.cpp)
# add_executable(ex_10_19 ex_10_19.cpp)
# add_executable(ex_10_20 ex_10_20.cpp)
# add_executable(ex_10_22 ex_10_22.cpp)
# add_executable(ex_10_24 ex_10_24.cpp)
# add_executable(ex_10_25 ex_10_25.cpp)
# add_executable(ex_10_27 ex_10_27.cpp)
# add_executable(ex_10_28 ex_10_28.cpp)
# add_executable(ex_10_29 ex_10_29.cpp)
# add_executable(ex_10_30 ex_10_30.cpp)
# add_executable(ex_10_31 ex_10_31.cpp)
# add_executable(ex_10_32 ex_10_32.cpp)
# add_executable(ex_10_34 ex_10_34.cpp)
# add_executable(ex_10_33 ex_10_33.cpp)
# add_executable(ex_10_35 ex_10_35.cpp)
# add_executable(ex_10_36 ex_10_36.cpp)
# add_executable(ex_10_37 ex_10_37.cpp)
# add_executable(ex_11_3 ex_11_3.cpp)
# add_executable(ex_11_7 ex_11_7.cpp)
# add_executable(ex_11_8 ex_11_8.cpp)
# add_executable(ex_11_11 ex_11_11.cpp)
# add_executable(ex_11_12 ex_11_12.cpp)
# add_executable(ex_11_14 ex_11_14.cpp)
# add_executable(ex_11_20 ex_11_20.cpp)
# add_executable(ex_11_23 ex_11_23.cpp)
# add_executable(ex_11_26 ex_11_26.cpp)
# add_executable(ex_11_31 ex_11_31.cpp)
# add_executable(ex_11_32 ex_11_32.cpp)
# add_executable(ex_11_33 ex_11_33.cpp)
# add_executable(ex_11_38 ex_11_38.cpp)
add_executable(ex_12_2 ex_12_2.cpp)
add_executable(ex_12_6 ex_12_6.cpp)
add_executable(ex_12_7 ex_12_7.cpp)
add_executable(ex_12_10 ex_12_10.cpp)
add_executable(ex_12_12 ex_12_12.cpp)
add_executable(ex_12_11 ex_12_11.cpp)
add_executable(ex_12_13 ex_12_13.cpp)
